--- a/pure.html
+++ b/pure.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fluid Simulation in Javascript</title>
+    <title>NBD</title>
     <link rel="stylesheet" href="css/pure.css">
   </head>
   <body>
